# rag_fca

./: .env  CohereWeaviate.ipynb  FullyLocal.ipynb  README.md  docker-compose.yml  pyproject.toml
